--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,16 +4,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Nunito", sans-serif;
 }
 
 body {
   background-color: $base-background;
-  font-family: "Nunito", sans-serif;
 }
 
 a{
   text-decoration: none;
 }
+
+ul li { list-style: none; }
 
 img{
   max-width: 100%;
