feat: add code font-family

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,6 +23,10 @@ img{
   display: block;
 }
 
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
 .main__content{
   margin-top: -4.5rem;
   padding: 0 2rem;
