--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -29,7 +29,7 @@ code {
 
 .main__content{
   margin-top: -4.5rem;
-  padding: 0 2rem;
+  padding: 0 2rem 5rem 2rem;
   position: relative;
   z-index: 10;
   display: flex;
