refactor: set no item list search

--- a/src/pages/Blog/_style.scss
+++ b/src/pages/Blog/_style.scss
@@ -68,4 +68,10 @@
   display:grid;
   gap: 2rem;
   grid-template-columns: 26rem 26rem;
+
+  .no-item{
+    text-align: center;
+    font-size: 1.125rem;
+    color: $base-title;
+  }
 }
